--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
 	</properties>
 	
 	<dependencies>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -33,7 +32,10 @@
 			<artifactId>netty-all</artifactId>
 			<!--><version>4.1.6.Final</version><!-->
 		</dependency>
-
+            <dependency>
+                <groupId>org.msgpack</groupId>
+                <artifactId>msgpack</artifactId>
+            </dependency>
 	</dependencies>
 
 	<build>
